# probelock

./: .gitignore  CHANGELOG.md  README.md  STABILITY.md  VALIDATION-TRACES.md  VALIDATION.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: DEMO.md  demo.sh  probelock-demo.cast  report-qwen-vs-lfm.html
examples/: agent_tools.json  otel_traces_to_probelock.py  record_agent_sessions.py
fixtures/: gptoss_regression_trace.json  hard_agent_tools.json  profile_q4.json  profile_q8.json  sample_agent_log.jsonl  sample_anthropic_log.jsonl  sample_openai_log.jsonl  sample_otel_spans.json  sample_traces.json
probelock/: __init__.py  cli.py  clients.py  diff.py  doctor.py  ingest.py  lockfile.py  mined.py  models.py  probes.py  proxy.py  runner.py  scoring.py  stats.py  traces.py  trend.py
probelock/data/: format_probes.json  restraint_probes.json
tests/: test_cli.py  test_diff.py  test_doctor.py  test_httpclient.py  test_ingest.py  test_mined.py  test_models.py  test_probes.py  test_proxy.py  test_runner.py  test_scoring.py  test_sdk_clients.py  test_stats.py  test_traces.py  test_trend.py
