[project]
name = "probelock"
version = "0.2.0"
description = "A capability lockfile for local models. Catch silent regressions when you swap a model, quant, or runtime."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Michael A. Riegler" }]
keywords = [
  "llm", "local-models", "ollama", "llama-cpp", "mlx", "quantization",
  "tool-calling", "evals", "regression-testing", "ci",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/kelkalot/probelock"
Repository = "https://github.com/kelkalot/probelock"
Issues = "https://github.com/kelkalot/probelock/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
# Route to many providers (Anthropic, Gemini, Mistral, …) via a unified SDK.
# any-llm needs the relevant provider extra too, e.g. 'any-llm-sdk[anthropic]'.
# any-llm-sdk requires Python >=3.11, so it's marker-gated (the core stays >=3.10).
anyllm = ["any-llm-sdk>=0.2; python_version >= '3.11'"]
litellm = ["litellm>=1.0"]

[project.scripts]
probelock = "probelock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["probelock"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "**/.venv", "build", "dist"]
